--- a/ux.html
+++ b/ux.html
@@ -63,7 +63,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland  Berlin</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/mobile-ux-designer/b6756b3e8f619e4d04af132792533659/'>Mobile UX Designer at Moneybox</a></h5> 
+<h5><a href='https://snap.hr/moneybox/job/mobile-ux-designer/b6756b3e8f619e4d04af132792533659/'>Mobile UX Designer at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698455776-praktikant-in-im-bereich-user-research-im-ux-team'>Bosch Group Praktikant*in im Bereich User Research im UX-Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698455776-praktikant-in-im-bereich-user-research-im-ux-team'>Bosch Group Praktikant*in im Bereich User Research im UX-Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -135,7 +135,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/loanpal/job/oROrbfw1'>Loanpal Careers - Senior UX Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/loanpal/job/oROrbfw1'>Loanpal Careers - Senior UX Designer</a></h5> 
 <p><span class="badge badge-light">Roseville, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -143,7 +143,7 @@
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/ocBSCGHGEK/UX-Designer'>UX Designer - Vizrt - Career Page</a></h5> 
+<h5><a href='http://vizrt.applytojob.com/apply/ocBSCGHGEK/UX-Designer'>UX Designer - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -151,7 +151,7 @@
 <p><span class="badge badge-light">M?nchen M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ClientSolvTechnologies/743999698426886-ui-ux-developer-consultant'>ClientSolv Technologies UI/UX Developer consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Littleton, CO, USA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -259,7 +259,7 @@
 <p><span class="badge badge-light">Indonesia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://squad.breezy.hr/p/ca5c10f33549-product-manager-agent-ux'>Product Manager- Agent UX at Squad</a></h5> 
 <p><span class="badge badge-light">Delhi/NCR, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -293,7 +293,7 @@
 <p><span class="badge badge-light">Kenya</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584752'>Stellenangebot: (Junior) UX Designer (M/W/D) (Hamburg) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -313,7 +313,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/hkEiYQdMaq/UX-Designer'>UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/hkEiYQdMaq/UX-Designer'>UX Designer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -415,7 +415,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584719'>Stellenangebot: UX / UI Designer*in (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584719'>Stellenangebot: UX / UI Designer*in (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -429,7 +429,7 @@
 <p><span class="badge badge-light">France Amsterdam</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://corra.applytojob.com/apply/AwVieUzuKh/Senior-UX-Designer-Temp-To-Perm'>Senior UX Designer (Temp to Perm) - Corra - Career Page</a></h5> 
+<h5><a href='http://corra.applytojob.com/apply/AwVieUzuKh/Senior-UX-Designer-Temp-To-Perm'>Senior UX Designer (Temp to Perm) - Corra - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -437,7 +437,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
+<h5><a href='https://authenticjobs.com/jobs/31691?r=rss2'>Authentic Jobs UX/UI Designer at Modea</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
